CLIENT-1694: fix dex watchlist select z-index

--- a/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
+++ b/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
@@ -86,6 +86,7 @@ body.dex-demo .dex-wrapper {
 
         w-select {
           position: relative;
+          z-index: 6;
 
           .select-list {
             max-height: 155px;
