--- a/src/modules/utils/modals/tutorialModals/tutorialModals.less
+++ b/src/modules/utils/modals/tutorialModals/tutorialModals.less
@@ -22,40 +22,42 @@
   justify-content: space-between;
 }
 
-.cell {
-  background-repeat: no-repeat;
-  flex-basis: calc(50% ~'- 10px');
-  min-height: 40px;
-}
-.cell-001 {
-  background: @modal-anonymus-icon no-repeat;
-}
-.cell-002 {
-  background: @modal-password-icon no-repeat;
-}
-.cell-003 {
-  background: @modal-backup-icon no-repeat;
-}
-.cell-004 {
-  background: @modal-paper-icon no-repeat;
-}
-.cell-005 {
-  background: @modal-url-icon no-repeat;
-}
-.cell-006 {
-  background: @modal-plugin-icon no-repeat;
-}
-.cell-007 {
-  background: @modal-mail-icon no-repeat;
-}
-.cell-008 {
-  background: @modal-refresh-icon no-repeat;
-}
-.cell-009 {
-  background: @modal-os-icon no-repeat;
-}
-.cell-010 {
-  background: @modal-wifi-icon no-repeat;
+.tutorial-modals {
+  .cell {
+    background-repeat: no-repeat;
+    flex-basis: calc(50% ~'- 10px');
+    min-height: 40px;
+  }
+  .cell-001 {
+    background: @modal-anonymus-icon no-repeat;
+  }
+  .cell-002 {
+    background: @modal-password-icon no-repeat;
+  }
+  .cell-003 {
+    background: @modal-backup-icon no-repeat;
+  }
+  .cell-004 {
+    background: @modal-paper-icon no-repeat;
+  }
+  .cell-005 {
+    background: @modal-url-icon no-repeat;
+  }
+  .cell-006 {
+    background: @modal-plugin-icon no-repeat;
+  }
+  .cell-007 {
+    background: @modal-mail-icon no-repeat;
+  }
+  .cell-008 {
+    background: @modal-refresh-icon no-repeat;
+  }
+  .cell-009 {
+    background: @modal-os-icon no-repeat;
+  }
+  .cell-010 {
+    background: @modal-wifi-icon no-repeat;
+  }
 }
 
 .tooltip {
